// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Function Should synth and match SnapShot 1`] = `
"{
  "data": {
    "archive_file": {
      "HelloWorld_HelloWorldacbd18db4cc2f85cedef654fccc4a4d8E6E2A6A7_4BABCFBE": {
        "output_path": "\${path.root}/.archive_files/HelloWorldacbd18db4cc2f85cedef654fccc4a4d8E6E2A6A7.zip",
        "provider": "archive",
        "source_content": "foo",
        "source_content_filename": "index.py",
        "type": "zip"
      }
    },
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_iam_policy_document": {
      "HelloWorld_ServiceRole_AssumeRolePolicy_BA710C6B": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "\${data.aws_service_principal.aws_svcp_default_region_lambda.name}"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      },
      "HelloWorld_ServiceRole_DefaultPolicy_80066894": {
        "statement": [
          {
            "actions": [
              "xray:PutTraceSegments",
              "xray:PutTelemetryRecords"
            ],
            "effect": "Allow",
            "resources": [
              "*"
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_region": {
      "Region": {
        "provider": "aws"
      }
    },
    "aws_service_principal": {
      "aws_svcp_default_region_lambda": {
        "service_name": "lambda"
      }
    }
  },
  "provider": {
    "archive": [
      {
      }
    ],
    "aws": [
      {
      }
    ]
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "HelloWorld_LogGroup_948040CF": {
        "name": "/aws/lambda/Grid-HelloWorld",
        "retention_in_days": 7,
        "tags": {
          "Name": "Default-HelloWorld",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "Grid"
        }
      }
    },
    "aws_iam_role": {
      "HelloWorld_ServiceRole_F3F7D8B0": {
        "assume_role_policy": "\${data.aws_iam_policy_document.HelloWorld_ServiceRole_AssumeRolePolicy_BA710C6B.json}",
        "managed_policy_arns": [
          "arn:\${data.aws_partition.Partitition.partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
        ],
        "name_prefix": "Grid-HelloWorldServiceRole",
        "tags": {
          "Name": "Default-HelloWorld",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "Grid"
        }
      }
    },
    "aws_iam_role_policy": {
      "HelloWorld_ServiceRole_DefaultPolicy_ResourceRoles0_F82A2883": {
        "name": "HelloWorldServiceRoleDefaultPolicyD106D926",
        "policy": "\${data.aws_iam_policy_document.HelloWorld_ServiceRole_DefaultPolicy_80066894.json}",
        "role": "\${aws_iam_role.HelloWorld_ServiceRole_F3F7D8B0.name}"
      }
    },
    "aws_lambda_function": {
      "HelloWorld_7964D1E8": {
        "architectures": [
          "x86_64"
        ],
        "depends_on": [
          "aws_cloudwatch_log_group.HelloWorld_LogGroup_948040CF",
          "data.aws_iam_policy_document.HelloWorld_ServiceRole_AssumeRolePolicy_BA710C6B",
          "aws_iam_role.HelloWorld_ServiceRole_F3F7D8B0",
          "data.aws_iam_policy_document.HelloWorld_ServiceRole_DefaultPolicy_80066894",
          "aws_iam_role_policy.HelloWorld_ServiceRole_DefaultPolicy_ResourceRoles0_F82A2883"
        ],
        "environment": {
          "variables": {
          }
        },
        "filename": "\${data.archive_file.HelloWorld_HelloWorldacbd18db4cc2f85cedef654fccc4a4d8E6E2A6A7_4BABCFBE.output_path}",
        "function_name": "Grid-HelloWorld",
        "handler": "index.handler",
        "memory_size": 128,
        "role": "\${aws_iam_role.HelloWorld_ServiceRole_F3F7D8B0.arn}",
        "runtime": "python3.14",
        "source_code_hash": "\${data.archive_file.HelloWorld_HelloWorldacbd18db4cc2f85cedef654fccc4a4d8E6E2A6A7_4BABCFBE.output_base64sha256}",
        "tags": {
          "Name": "Default-HelloWorld",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "Grid"
        },
        "timeout": 3,
        "tracing_config": {
          "mode": "Active"
        }
      }
    }
  },
  "terraform": {
    "backend": {
      "local": {
        "path": "/Users/admin/projects/public/terraconstructs-base/terraform.Default.tfstate"
      }
    },
    "required_providers": {
      "archive": {
        "source": "hashicorp/archive",
        "version": "2.7.1"
      },
      "aws": {
        "source": "aws",
        "version": "6.25.0"
      }
    }
  }
}"
`;

exports[`latest Lambda node runtime with region agnostic stack 1`] = `
"{
  "data": {
    "archive_file": {
      "Lambda_StackLambdaacbd18db4cc2f85cedef654fccc4a4d8996AFBA2_92C287E8": {
        "output_path": "\${path.root}/.archive_files/StackLambdaacbd18db4cc2f85cedef654fccc4a4d8996AFBA2.zip",
        "provider": "archive",
        "source_content": "foo",
        "source_content_filename": "index.js",
        "type": "zip"
      }
    },
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_iam_policy_document": {
      "Lambda_ServiceRole_AssumeRolePolicy_FE762235": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "\${data.aws_service_principal.aws_svcp_default_region_lambda.name}"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      },
      "Lambda_ServiceRole_DefaultPolicy_E1FFF11A": {
        "statement": [
          {
            "actions": [
              "xray:PutTraceSegments",
              "xray:PutTelemetryRecords"
            ],
            "effect": "Allow",
            "resources": [
              "*"
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_region": {
      "Region": {
        "provider": "aws"
      }
    },
    "aws_service_principal": {
      "aws_svcp_default_region_lambda": {
        "service_name": "lambda"
      }
    }
  },
  "provider": {
    "archive": [
      {
      }
    ],
    "aws": [
      {
      }
    ]
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "Lambda_LogGroup_966346B4": {
        "name": "/aws/lambda/GridStack740B6247-StackLambda",
        "retention_in_days": 7,
        "tags": {
          "Name": "Default-Lambda",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "GridStack740B6247"
        }
      }
    },
    "aws_iam_role": {
      "Lambda_ServiceRole_A8ED4D3B": {
        "assume_role_policy": "\${data.aws_iam_policy_document.Lambda_ServiceRole_AssumeRolePolicy_FE762235.json}",
        "managed_policy_arns": [
          "arn:\${data.aws_partition.Partitition.partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
        ],
        "name_prefix": "GridStack740B6247-SckLambdaServiceRole",
        "tags": {
          "Name": "Default-Lambda",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "GridStack740B6247"
        }
      }
    },
    "aws_iam_role_policy": {
      "Lambda_ServiceRole_DefaultPolicy_ResourceRoles0_DE66D1AF": {
        "name": "StackLambdaServiceRoleDefaultPolicyB03C1F73",
        "policy": "\${data.aws_iam_policy_document.Lambda_ServiceRole_DefaultPolicy_E1FFF11A.json}",
        "role": "\${aws_iam_role.Lambda_ServiceRole_A8ED4D3B.name}"
      }
    },
    "aws_lambda_function": {
      "Lambda_D247545B": {
        "architectures": [
          "x86_64"
        ],
        "depends_on": [
          "aws_cloudwatch_log_group.Lambda_LogGroup_966346B4",
          "data.aws_iam_policy_document.Lambda_ServiceRole_AssumeRolePolicy_FE762235",
          "aws_iam_role.Lambda_ServiceRole_A8ED4D3B",
          "data.aws_iam_policy_document.Lambda_ServiceRole_DefaultPolicy_E1FFF11A",
          "aws_iam_role_policy.Lambda_ServiceRole_DefaultPolicy_ResourceRoles0_DE66D1AF"
        ],
        "environment": {
          "variables": {
          }
        },
        "filename": "\${data.archive_file.Lambda_StackLambdaacbd18db4cc2f85cedef654fccc4a4d8996AFBA2_92C287E8.output_path}",
        "function_name": "GridStack740B6247-StackLambda",
        "handler": "index.handler",
        "memory_size": 128,
        "role": "\${aws_iam_role.Lambda_ServiceRole_A8ED4D3B.arn}",
        "runtime": "nodejs22.x",
        "source_code_hash": "\${data.archive_file.Lambda_StackLambdaacbd18db4cc2f85cedef654fccc4a4d8996AFBA2_92C287E8.output_base64sha256}",
        "tags": {
          "Name": "Default-Lambda",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "GridStack740B6247"
        },
        "timeout": 3,
        "tracing_config": {
          "mode": "Active"
        }
      }
    }
  },
  "terraform": {
    "backend": {
      "local": {
        "path": "/Users/admin/projects/public/terraconstructs-base/terraform.Stack.tfstate"
      }
    },
    "required_providers": {
      "archive": {
        "source": "hashicorp/archive",
        "version": "2.7.1"
      },
      "aws": {
        "source": "aws",
        "version": "6.25.0"
      }
    }
  }
}"
`;
